--- a/index.html
+++ b/index.html
@@ -13,34 +13,41 @@
   </head>
   <body>
     <div class="container">
-      <div class="jumbotron">
-        <h1>Header</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation </p>
-      </div>  <!-- /JUMBOTRON -->
-
-  <!-- Row: 1 -->
-      <div class="row">
-        <div class="col-sm-12">
-
-  <!-- Form -->        
-          <form class="">
-            <div class="form-group">
-              <label for="">Lorem Ipsum Baby!:</label>
-              <input class="hotPuddin" type="text" name="name" value="">
-            </div>
-
-            <div class="form-group">
-              <label for="">Lorem Ipsum Baby!:</label>
-              <input class="hotPuddin" type="text" name="name" value="">
-            </div>
-
-            <button class="btn btn-info" type="submit" name="button">Gimme some sugar baby</button>
+        <h1>Vacation Logger</h1>
+        <h3>Add a place you've been</h3>
+        <form id="new-vacay" class="">
+              <div class="form-group">
+                <label for="new-city">City</label>
+                <input type="text" class="new-city">
+              </div>
+              <div class="form-group">
+                <label for="new-state">State</label>
+                <input type="text" class="new-state">
+              </div>
+              <div class="form-group">
+                <label for="new-country">Country</label>
+                <input type="text" class="new-country">
+              </div>
+              <div class="form-group">
+                <label for="new-event">Events</label>
+                <input type="text" class="new-event">
+              </div>
+            <button type="submit" class="btn">Add</button>
           </form>
 
-        </div>  <!-- /col-sm-12 -->
-      </div>  <!-- /Row -->
+      <h2>Trips:</h2>
+        <ul id="trips">
 
-    </div>  <!-- /Container -->
+          </ul>
+        </div>
+
+        <div id="show-trip">
+        <h2></h2>
+        <p>Events:</p>
+        <ul id="events">
+
+        </ul>
+      </div>
 
   </body>
 </html>
